@@ -1,3 +1,9 @@
+2013-08-16  Allin Cottrell  <cottrell@wfu.edu>
+
+	* src/internal.c (GP_MATHERR): 1st part of win64 compatibility patch.
+	The matherr() mechanism is not used by win64. It's also not used by
+	current linux but it doesn't hurt to leave it in place for now.
+
 2013-08-13  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/eval.c (update_gpval_variables):  Missing GPVAL_* entry
